Add StarMade server scripts and installer
Introduce initial StarMade server management suite: adds bootstrap/install scripts, config.sh template, start/stop/backup/restore/update/scheduled-restart scripts, and a README with setup and usage instructions. Includes a .gitignore and installer plumbing that creates a systemd service, configures passwordless sudo for service control, makes scripts executable, and handles Java/dependency installation. This commit provides a full automated/manual setup path for running and maintaining a StarMade dedicated server.